DC-89 - Tests for SOC and getting alerts