@@ -1,79 +1,76 @@
 package uk.gov.justice.digital.hmpps.riskprofiler.services;
 
-import com.google.common.collect.ImmutableList;
 import org.assertj.core.api.Assertions;
 import org.junit.Before;
 import org.junit.Ignore;
 import org.junit.Test;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.mock.mockito.MockBean;
+import org.junit.runner.RunWith;
+import org.mockito.Mock;
+import org.mockito.junit.MockitoJUnitRunner;
 import uk.gov.justice.digital.hmpps.riskprofiler.model.Alert;
-import uk.gov.justice.digital.hmpps.riskprofiler.model.EscapeProfile;
 
 import java.time.LocalDate;
 import java.time.Month;
-import java.util.Optional;
+import java.util.List;
 
 import static org.mockito.Mockito.when;
 
+@RunWith(MockitoJUnitRunner.class)
 @Ignore
 public class EscapeDecisionTreeServiceTest {
 
-    public static final String OFFENDER_1 = "AB1234A";
-    final LocalDate pretendNow = LocalDate.of(2018, Month.JULY, 26);
+    private static final String OFFENDER_1 = "AB1234A";
     final LocalDate expired8Months = LocalDate.of(2017, Month.NOVEMBER, 26);
     final LocalDate expired4Months = LocalDate.of(2017, Month.MARCH, 26);
-    final LocalDate expired14Months = LocalDate.of(2017, Month.MAY, 26);
 
-    @Autowired
     private EscapeDecisionTreeService service;
 
-    @MockBean
+    @Mock
     private NomisService nomisService;
-
 
     @Before
     public void setup() {
-
+        service = new EscapeDecisionTreeService(nomisService);
     }
+
     @Test
     public void testHeightendResponse() {
-        Alert xel12 = Alert.builder().active(true).alertCode("XEL").build();
-        Alert xel = Alert.builder().active(false).alertCode("XEL").dateExpires(expired8Months).build();
+        var xel12 = Alert.builder().active(true).alertCode("XEL").build();
+        var xel = Alert.builder().active(false).alertCode("XEL").dateExpires(expired8Months).build();
 
-        when(nomisService.getEscapeListAlertsForOffender(OFFENDER_1)).thenReturn(Optional.of(ImmutableList.of(xel12, xel)));
+        when(nomisService.getEscapeListAlertsForOffender(OFFENDER_1)).thenReturn(List.of(xel12, xel));
 
-        final EscapeProfile escapeProfile = service.getEscapeProfile(OFFENDER_1);
+        var escapeProfile = service.getEscapeProfile(OFFENDER_1);
         Assertions.assertThat(escapeProfile).extracting("provisionalCategorisation").isEqualTo("B");
     }
 
     @Test
     public void testHeightendInactiveResponse() {
-        Alert xel = Alert.builder().active(false).alertCode("XEL").dateExpires(expired8Months).build();
+        var xel = Alert.builder().active(false).alertCode("XEL").dateExpires(expired8Months).build();
 
-        when(nomisService.getEscapeListAlertsForOffender(OFFENDER_1)).thenReturn(Optional.of(ImmutableList.of(xel)));
+        when(nomisService.getEscapeListAlertsForOffender(OFFENDER_1)).thenReturn(List.of(xel));
 
-        final EscapeProfile escapeProfile = service.getEscapeProfile(OFFENDER_1);
+        var escapeProfile = service.getEscapeProfile(OFFENDER_1);
         Assertions.assertThat(escapeProfile).extracting("provisionalCategorisation").isEqualTo("B");
     }
 
     @Test
     public void testStandardResponse() {
-        Alert xel = Alert.builder().active(true).alertCode("XER").build();
+        var xel = Alert.builder().active(true).alertCode("XER").build();
 
-        when(nomisService.getEscapeListAlertsForOffender(OFFENDER_1)).thenReturn(Optional.of(ImmutableList.of(xel)));
+        when(nomisService.getEscapeListAlertsForOffender(OFFENDER_1)).thenReturn(List.of(xel));
 
-        final EscapeProfile escapeProfile = service.getEscapeProfile(OFFENDER_1);
+        var escapeProfile = service.getEscapeProfile(OFFENDER_1);
         Assertions.assertThat(escapeProfile).extracting("provisionalCategorisation").isEqualTo("B");
     }
 
     @Test
     public void testStandardInactiveResponse() {
-        Alert xel = Alert.builder().active(false).alertCode("XER").dateExpires(expired4Months).build();
+        var xel = Alert.builder().active(false).alertCode("XER").dateExpires(expired4Months).build();
 
-        when(nomisService.getEscapeListAlertsForOffender(OFFENDER_1)).thenReturn(Optional.of(ImmutableList.of(xel)));
+        when(nomisService.getEscapeListAlertsForOffender(OFFENDER_1)).thenReturn(List.of(xel));
 
-        final EscapeProfile escapeProfile = service.getEscapeProfile(OFFENDER_1);
+        var escapeProfile = service.getEscapeProfile(OFFENDER_1);
         Assertions.assertThat(escapeProfile).extracting("provisionalCategorisation").isEqualTo("C");
     }
 
